--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 #sidebar {
-  border-right: 1px solid #e5e7eb;
+  border-right: 1px solid rgb(var(--gray-200) / 0.5);
+}
+
+.dark #sidebar {
+  border-right: 1px solid rgb(255 255 255/0.07);
 }
 
 #sidebar-content,
 #sidebar > ul {
-  background: #ffffff;
+  background: transparent;
 }
